[package]
name = "udp-request"
version = "0.0.1"
edition = "2021"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = """A simple UDP request library for sending and receiving UDP packets, designed to handle network communication in Rust applications."""
keywords = ["udp", "net", "response", "request", "tool"]
repository = "https://github.com/ltpp-universe/udp-request.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",    
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
lombok-macros = "1.7.4"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"