[package]
name = "udp-request"
version = "0.3.0"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A simple UDP request library for sending and receiving UDP packets, designed to handle network communication in Rust applications."""
keywords = ["udp", "net", "response", "request", "tool"]
repository = "https://github.com/eastspire/udp-request.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
